--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,14 +6,19 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy-api:
-    name: Deploy Backend (Go API)
+  deploy:
+    name: Deploy API + Web to Railway
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
       - name: Install Railway CLI
-        run: bash <(curl -fsSL https://railway.app/install.sh)
+        run: |
+          curl -fsSL https://github.com/railwayapp/cli/releases/download/v4.30.5/railway-v4.30.5-x86_64-unknown-linux-gnu.tar.gz \
+            -o /tmp/railway.tar.gz
+          tar -xzf /tmp/railway.tar.gz -C /tmp/
+          sudo mv /tmp/railway /usr/local/bin/railway
+          railway --version
 
       - name: Set API environment variables
         env:
@@ -33,16 +38,6 @@ jobs:
         working-directory: backend
         run: railway up --service api --detach
 
-  deploy-web:
-    name: Deploy Frontend (React)
-    runs-on: ubuntu-latest
-    needs: deploy-api
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Railway CLI
-        run: bash <(curl -fsSL https://railway.app/install.sh)
-
       - name: Set Web environment variables
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
@@ -57,19 +52,9 @@ jobs:
         working-directory: frontend
         run: railway up --service web --detach
 
-  generate-domains:
-    name: Generate Public Domains
-    runs-on: ubuntu-latest
-    needs: [deploy-api, deploy-web]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Railway CLI
-        run: bash <(curl -fsSL https://railway.app/install.sh)
-
       - name: Generate domain for web service
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         run: |
-          railway domain --service web 2>/dev/null || echo "Domain already exists or skipped"
-          echo "Done! Check Railway dashboard for the public URL."
+          railway domain --service web 2>/dev/null || echo "Domain already exists"
+          echo "Deploy concluido!"
